...
            <objects>
                <viewController storyboardIdentifier="SearchViewController" id="8Ns-lD-AVi" userLabel="Search View Controller" customClass="SearchViewController" customModule="Grow4U" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="om5-9I-B0G">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" text="" placeholder="Product Name" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hid-9i-1YA">
                                <rect key="frame" x="0.0" y="88" width="414" height="70"/>
                                <color key="backgroundColor" red="0.079277820890000003" green="0.68845605850000002" blue="0.2460487485" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="KPf-1J-lJi"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </view>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KbA-Ik-r55">
                                                    <rect key="frame" x="324" y="0.0" width="50" height="99.666666666666671"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="50" id="LSo-7i-Yuq"/>
                                                    </constraints>
                                                    <state key="normal" image="list item button">
                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="showProductDetails:" destination="1oT-lX-qxn" eventType="touchUpInside" id="7sm-9s-QGE"/>
                                                    </connections>
                                                </button>
...
                            <constraint firstItem="Hid-9i-1YA" firstAttribute="top" secondItem="kNu-3F-ZBW" secondAttribute="top" id="eGG-JW-eFz"/>
                            <constraint firstItem="Hid-9i-1YA" firstAttribute="centerX" secondItem="kNu-3F-ZBW" secondAttribute="centerX" id="h9w-9F-HYY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="kNu-3F-ZBW"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="Search-icon" landscapeImage="Search-icon" selectedImage="Search-icon" id="SXI-Fg-6rc"/>
                    <navigationItem key="navigationItem" title="Search" id="9Dj-1Z-B4E">
                        <barButtonItem key="backBarButtonItem" title="Back" id="cii-QP-axx"/>
                    </navigationItem>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="searchBar" destination="Hid-9i-1YA" id="bnY-b3-uXY"/>
                        <outlet property="tableView" destination="KjM-47-Fuf" id="sYS-c8-qa5"/>
                    </connections>
...
            <point key="canvasLocation" x="2986.2676056338028" y="-406.875"/>
        </scene>
        <!--Product Nav Controller-->
        <scene sceneID="Phb-Gz-RKJ">
            <objects>
                <navigationController storyboardIdentifier="ProductNavController" automaticallyAdjustsScrollViewInsets="NO" id="O6V-gk-ywb" customClass="ProductNavController" customModule="Grow4U" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="" image="Search-icon" landscapeImage="Search-icon" largeContentSizeImage="tabSearchIcon" selectedImage="Search-icon" id="w3a-Mo-O7e"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yHR-rt-lb1">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
